# playwright-pom-project

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: test_config.toml
scripts/: run_all_pytest.sh
src/pom_project/: __init__.py  framework_config.py
src/pom_project/db/: __init__.py  credential_store.py
src/pom_project/pages/: __init__.py  account_page.py  automation_store_css_page.py  automation_store_xpath_page.py  base_page.py  home_page.py  login_page.py  saucedemo_inventory_page.py  saucedemo_login_page.py
tests/: conftest.py  test_example.py
tests/task3/: test_scenario_1_invalid_login.py  test_scenario_2_valid_login.py
tests/task4/: test_scenario_1_dove_newest_item_cart.py  test_scenario_2_apparel_shoes_css_cart.py  test_scenario_3_skin_care_sale_items_xpath.py  test_scenario_4_men_name_ends_with_m_xpath.py
